# sharpmz-80k

./: 8253.c  8255.c  AHLS-BENCHMARK.MZF  CMakeLists.txt  Duck Shoot.mzf  E24 Parascan.mzf  EASTER-SUNDAY.MZF  ECLIPSE.MZF  EPIDEMIC 2021.mzf  ERASTOTHENES 2.mzf  Erastothenes.mzf  MONSTER-CHASE-V1.MZF  Mad Max 2021.mzf  Newton MZ80K.mzf  README.md  Race Chase.mzf  Res Parascan.mzf  Road-Shooter.mzf  Ski run 2021.mzf  The Valley 11.8.mzf  cassette.c  keyboard.c  sharpcorp.c  sharpmz.c  sharpmz.h  tapes.c  vgadisplay.c
